2008-03-04 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* src/SDCCmain.c: added predefined macros SDCC_REVISION (RFE #1907229),
          and (depending on corresponding compiler option) SDCC_PARMS_IN_BANK1, 
          SDCC_FLOAT_REENT, SDCC_INT_LONG_REENT 
	* device/include/mcs51/compiler.h: removed umlauts, added double
	  underscore

2008-03-04 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCptropt.c (ptrPseudoSymConvert): fixed bug 1536762
	* support/regression/tests/bug1536762.c: new, added
	* src/SDCCutil.c,
	* src/SDCCutil.h: added getBuildDate()
	* src/SDCCmain.c (printVersionInfo),
	* src/SDCCglue.c (initialComments): use getBuildDate() instead of __DATE__
	* src/*/ralloc.c: removed IS_OP_RUONLY macro
	* src/ds390/ralloc.c (packRegisters),
	* src/mcs51/ralloc.c (packRegisters),
	* src/z80/ralloc.c (packRegisters): applied fix for bug 1618050, thanks
	  Robert Larice
	* support/regression/tests/bug1618050.c: new, added
	* src/SDCCsymt.h: fixed typo in DECLSPEC2TXT
	* support/regression/fwk/include/testfwk.h,
	* support/regression/tests/bug1838000.c: moved _AUTOMEM and _STATMEM to
	  testfwk.h

2008-03-04 Raphael Neider <rneider AT web.de>

	* src/pic/gen.c: removed unused prototypes, prevent internal errors
	  on accessing OP_SYM_TYPE(op)
	* src/pic/gen.h: removed unused prototype of genMinusDec()
	* src/pic/genarith.c (genMinus): cosmetic changes, rewritten to
	  fix #1876953 (invalid subtraction code), removed unused code

2008-03-03 Raphael Neider <rneider AT web.de>

	* src/pic/gen.c,
	* src/pic/gen.h,
	* src/pic/genarith.c,
	* src/pic/ralloc.c,
	* src/pic/ralloc.h: removed AOP_R0, AOP_R1, AOP_DPTR, AOP_DPTR2,
	  AOP_ACC, and *_IDX and adjusted code, removed unused legacy code

2008-03-03 Raphael Neider <rneider AT web.de>

	* src/pic/device.c (find_device): search user-specified paths first
	  for pic14devices.txt, fixes #1900827

2008-03-02 Borut Razem <borut.razem AT siol.net>
